Alteração de Cor do Robô

--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
 <body>
     <main>
         <section class="robotron">
-            <img class="robo" src="img/robotron.png" alt="Robotron" id="robotron">
+            <section class="botoes">
+                <button class="alterar" alterar onclick="trocaImagem('Azul')">Azul</button>
+                <button class="alterar" alterar onclick="trocaImagem('Amarelo')">Amarelo</button>
+                <button class="alterar" alterar onclick="trocaImagem('Branco')">Branco</button>
+                <button class="alterar" alterar onclick="trocaImagem('Preto')">Preto</button>
+                <button class="alterar" alterar onclick="trocaImagem('Rosa')">Rosa</button>
+                <button class="alterar" alterar onclick="trocaImagem('Vermelho')">Vermelho</button>
+            </section>
+            <img class="robo" src="img/Robotron 2000 - Azul.png" alt="Robotron" id="robotron">
             <figcaption class="titulo">ROBOTRON <br>2000</figcaption>
         </section>
 
